cmake_minimum_required(VERSION 3.15)

add_subdirectory("freetype")
#add_subdirectory("vulkan/glfw")
#add_subdirectory("vulkan/glm")
#add_subdirectory("vulkan_headers")
#add_subdirectory("vulkan_loader")
#add_subdirectory("zstd/build/cmake")
add_subdirectory("glm")
add_subdirectory("glfw")
add_subdirectory("imgui")
add_subdirectory("vma")
#add_subdirectory("llvm/llvm")
#add_subdirectory("llvm/clang")